--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "formik": "^2.1.3",
+    "leaflet": "^1.6.0",
+    "leaflet-fullscreen": "^1.0.2",
+    "leaflet-gpx": "^1.5.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
