--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.3",
+    "graphql-hooks": "^4.4.4",
     "leaflet": "^1.6.0",
     "leaflet-fullscreen": "^1.0.2",
     "leaflet-gpx": "^1.5.0",
@@ -14,8 +16,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-recaptcha": "^2.0.1",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
